# Driver-Monitoring

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  lifespan.py
backend/app/models/: inference.py  webrtc.py
backend/app/routers/: driver_monitoring.py  health.py
backend/app/services/: ice_servers.py  smoother.py
backend/app/services/metrics/: eye_closure.py  frame_context.py  metric_manager.py  yawn.py
backend/app/services/metrics/utils/: ear.py  geometry.py  head_pose_2d.py  mar.py  math.py
backend/scripts/: export_yolo_onnx.py
docs/: README.md  architecture.md  configuration.md  deployment.md  logging-insights.md  maps-integration.md  metrics.md  models.md  self-hosting.md  troubleshooting.md  user-flow.md  video-uploads.md  webrtc.md
docs/backend/: setup.md
mobile/: .env  .env.example  .gitignore  .prettierignore  README.md  app.json  eas.json  global.css  package-lock.json  package.json  pnpm-lock.yaml
nanochip-backend/: .dockerignore  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt  run.py
nanochip-mobile/: .editorconfig  babel.config.js  metro.config.js  package.json
nanochip-website/: .env.example  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
website/: .gitignore  next-sitemap.config.js  next.config.ts  package.json  tailwind.config.js
(+212 files in other folders)
